--- a/Pulse/app/src/main/res/values/strings.xml
+++ b/Pulse/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Pulse</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_camera">Camera</string>
+    <string name="title_graph">Graph</string>
+    <string name="title_stat">Statistics</string>
 </resources>
