--- a/Pulse/app/src/main/res/values/strings.xml
+++ b/Pulse/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_camera">Camera</string>
     <string name="title_graph">Graph</string>
     <string name="title_stat">Statistics</string>
+    <string name="text_bpm">bpm</string>
 </resources>
