--- a/Pulse/app/src/main/res/values/strings.xml
+++ b/Pulse/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="title_graph">Graph</string>
     <string name="title_stat">Statistics</string>
     <string name="text_bpm">bpm</string>
+
+    <string name="calibrate_intro_text">Hello there!
+        \nPlease put your phone onto the cardboard cut-out and begin calibration.</string>
+    <string name="calibrate_intro_button">Calibrate</string>
 </resources>
