--- a/Pulse/app/src/main/res/values/strings.xml
+++ b/Pulse/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Pulse</string>
     <string name="title_camera">Camera</string>
     <string name="title_graph">Graph</string>
-    <string name="title_stat">Statistics</string>
+    <string name="title_calibrate">Calibration</string>
     <string name="text_bpm">bpm</string>
 
     <string name="calibrate_intro_text">Hello there!
